--- a/index.html
+++ b/index.html
@@ -6,15 +6,38 @@
     <title>World-clock</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
+    <div class="box">
     <header>
 <h1>
     World-clock
 </h1>
     </header>
     <main>
+        <select name="" id="clock">
+            <option value="">choose a city</option>
+            <option value="">London</option>
+            <option value="">Sydney</option>
+            <option value="">Pretoria</option>
+            
+        </select>
+
+            <div id="flex">
+                <div class="city"><h2>Los Angeles</h2></div>
+            <div class="time">10:50:34</div>
+            </div>
+            <div id="flex2">
+             <div class="city"><h2>Paris</h2></div>
+             <div class="time">10:44:50</div>
+            </div>
+
+            <div class="flex3">
+                <div class="city"><h2>Johannesburg</h2></div>
+                <div class="time">10"44:00</div>
+            </div>
 
     </main>
+    </div>
     <footer>
         This project was coded by <a href="" >Amanda Ndala</a>
         ,is <a href="">open-sourced on Github</a> 
