--- a/index.html
+++ b/index.html
@@ -23,25 +23,37 @@
         </select>
 
             <div id="flex">
+                <div>
                 <div class="city"><h2>Los Angeles</h2></div>
-            <div class="time">10:50:34</div>
+                <div class="date"> 10 August 2024</div>
+                </div>
+            <div class="time">10:50:34 <small>AM</small></div>
             </div>
             <div id="flex2">
-             <div class="city"><h2>Paris</h2></div>
-             <div class="time">10:44:50</div>
+                <div>
+             <div class="city"><h2>Paris💛</h2></div>
+            <div class="date"> 10 August 2024</div>
+            </div>
+             <div class="time">10:44:50 <small>AM</small></div>
             </div>
 
-            <div class="flex3">
+            <div id="flex3">
+                <div>
                 <div class="city"><h2>Johannesburg</h2></div>
-                <div class="time">10"44:00</div>
+                <div class="date"> 10 August 2024</div>
+                </div>
+                <div class="time">10"44:00 <small>AM</small></div>
             </div>
+        
 
     </main>
     </div>
     <footer>
+        <div class="coder">
         This project was coded by <a href="" >Amanda Ndala</a>
         ,is <a href="">open-sourced on Github</a> 
         and hosted on <a href="">Netlify</a>
+        </div>
    <script src="index.js"></script>
    </footer> 
 </body>
