--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World-clock</title>
     <link rel="stylesheet" href="style.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
 </head>
 <body class="container">
     <div class="box">
@@ -24,25 +26,25 @@
 
             <div id="flex">
                 <div>
-                <div class="city"><h2>Los Angeles</h2></div>
-                <div class="date"> 10 August 2024</div>
+                <div class="city" ><h2>Los Angeles</h2></div>
+                <div class="date" id="losDate"> 10 August 2024</div>
                 </div>
-            <div class="time">10:50:34 <small>AM</small></div>
+            <div class="time" id="losTime">10:50:34 <small>AM</small></div>
             </div>
             <div id="flex2">
                 <div>
              <div class="city"><h2>Paris💛</h2></div>
-            <div class="date"> 10 August 2024</div>
+            <div class="date" id="paDate"> 10 August 2024</div>
             </div>
-             <div class="time">10:44:50 <small>AM</small></div>
+             <div class="time" id="paTime">10:44:50 <small>AM</small></div>
             </div>
 
             <div id="flex3">
                 <div>
                 <div class="city"><h2>Johannesburg</h2></div>
-                <div class="date"> 10 August 2024</div>
+                <div class="date" id="joDate"> 10 August 2024</div>
                 </div>
-                <div class="time">10"44:00 <small>AM</small></div>
+                <div class="time" id="joTime">10"44:00 <small>AM</small></div>
             </div>
         
 
