--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
             <div id="flex">
                 <div>
                 <div class="city" ><h2>Los Angeles</h2></div>
-                <div class="date" id="losDate"> 10 August 2024</div>
+                <div class="date" id="losDate"> </div>
                 </div>
-            <div class="time" id="losTime">10:50:34 <small>AM</small></div>
+            <div class="time" id="losTime"><small>AM</small></div>
             </div>
             <div id="flex2">
                 <div>
-             <div class="city"><h2>Paris💛</h2></div>
-            <div class="date" id="paDate"> 10 August 2024</div>
+             <div class="city"><h2>Canada</h2></div>
+            <div class="date" id="caDate"></div>
             </div>
-             <div class="time" id="paTime">10:44:50 <small>AM</small></div>
+             <div class="time" id="caTime"> <small>AM</small></div>
             </div>
 
             <div id="flex3">
                 <div>
                 <div class="city"><h2>Johannesburg</h2></div>
-                <div class="date" id="joDate"> 10 August 2024</div>
+                <div class="date" id="joDate"> </div>
                 </div>
                 <div class="time" id="joTime">10"44:00 <small>AM</small></div>
             </div>
