added multiple time

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <main>
         <select name="" id="clock">
             <option value="">choose a city</option>
-            <option value="">London</option>
-            <option value="">Sydney</option>
-            <option value="">Pretoria</option>
+            <option value="America/London">London</option>
+            <option value="Europe/Paris">Paris</option>
+            <option value="Africa/Pretoria">Pretoria</option>
             
         </select>
 
