--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <main>
         <select name="" id="clock">
             <option value="">choose a city</option>
+            <option value="current">My Current Location</option>
             <option value="America/London">London</option>
             <option value="Europe/Paris">Paris</option>
             <option value="Africa/Pretoria">Pretoria</option>
+            <option value="Pacific/Auckland">Auckland</option>
             
         </select>
 
