--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
             </div>
         
 
+            <button id="button"><a href="index.html">All cities</a></button>
+
     </main>
     </div>
     <footer>
         <div class="coder">
-        This project was coded by <a href="" >Amanda Ndala</a>
-        ,is <a href="">open-sourced on Github</a> 
-        and hosted on <a href="">Netlify</a>
+        This project was coded by <a href="https://github.com/Amanda799-star" >Amanda Ndala</a>
+        ,is <a href="https://github.com/Amanda799-star/world-clock-stage1">open-sourced on Github</a> 
+        and hosted on <a href="https://amandandalaclock.netlify.app/">Netlify</a>
         </div>
    <script src="index.js"></script>
    </footer> 
